feat: Create Design and Export View

--- a/views/ExportView.html
+++ b/views/ExportView.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- FAVICON -->
-    <link rel="icon" href="./assets/favicon.ico">
+    <link rel="icon" href="../assets/favicon.ico">
     <title>Deck Design</title>
     <!-- FONT AWESOME (ICONS) -->
     <script src="https://kit.fontawesome.com/42873fe91e.js" crossorigin="anonymous"></script>
@@ -14,11 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <!-- CSS STYLESHEETS -->
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <div>HOME</div>
-    <a href="./views/DesignView.html">Go to design</a>
-    <a href="./views/ExportView.html">Go to Export</a>
+    EXPORT
 </body>
 </html>
