--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,8 @@
   /* BASE COLORS */
   --white: #f0f0f0;
   --black: #000;
-  --yellow-1: #fbd65c;
+  --yellow-1: #eeba4a;
+  --orange: #e98e39;
   --yellow-2: #ffe591;
   --light-yellow-1: #fff2c7;
   --red-1: #c03540;
