feat: finish TEXT section on Design view

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,3 +53,14 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+input[type="color"]{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 30px;
+    height: 30px;
+    border: none;
+    outline: none ;
+    cursor: pointer;
+}
