feat: sync connect form with card editor components via events

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,8 @@
 @import "./mainButton.css";
 @import "./secondaryButton.css";
 @import "./textInput.css";
+@import "./cardEditor.css";
+@import "./dragabbleText.css";
 
 :root {
   /* BASE COLORS */
