feat: implement image box field on forms, and connect it to the main model

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@
 @import "./textInput.css";
 @import "./cardEditor.css";
 @import "./dragabbleText.css";
+@import "./imageInput.css";
 
 :root {
   /* BASE COLORS */
