refactor: convert export btn on source code btn

--- a/styles/designView.css
+++ b/styles/designView.css
@@ -112,7 +112,7 @@
     background-color: var(--dark-2);
 }
 
-#export-btn{
+#source-code-btn{
     position: absolute; 
     right: 3rem;
     top: 3rem;
