--- a/styles/mainButton.css
+++ b/styles/mainButton.css
@@ -22,7 +22,7 @@
 
 }
 .primary-button > i {
-    font-family: "Font Awesome 6 Free";
+    font-family: "Font Awesome 6 Brands";
     transition: transform 0.2s ease-in-out;
 }
 
